Prevent first dropdown from overflowing page

--- a/wp-content/themes/csisnuclearnetwork/assets/_scss/pages/home.scss
+++ b/wp-content/themes/csisnuclearnetwork/assets/_scss/pages/home.scss
@@ -22,6 +22,7 @@
     }
   }
 
+  /* stylelint-disable selector-max-compound-selectors */
   .header {
     &__inner {
       height: 100%;
@@ -115,6 +116,28 @@
           padding: initial;
           opacity: 1;
         }
+
+        .site-nav__menu > li:first-child {
+          .sub-menu-container-depth-0 {
+            left: 50%;
+
+            &::after {
+              left: 50%;
+            }
+          }
+        }
+      }
+
+      @include breakpoint('xxlarge') {
+        .site-nav__menu > li:first-child {
+          .sub-menu-container-depth-0 {
+            left: 50%;
+
+            &::after {
+              left: 50%;
+            }
+          }
+        }
       }
     }
 
@@ -150,7 +173,16 @@
           width: unset;
           background: transparent;
 
-          /* stylelint-disable */
+          > li:first-child {
+            .sub-menu-container-depth-0 {
+              left: calc(100% + 6vw);
+
+              &::after {
+                left: calc(6vw + 10%);
+              }
+            }
+          }
+
           > li {
             display: flex;
             align-items: center;
@@ -272,10 +304,34 @@
           row-gap: rem(8);
           background: linear-gradient(180deg, #10385f 0%, #1c5b96 100%);
         }
-        /* stylelint-enable */
+      }
+
+      @include breakpoint('xlarge') {
+        &__menu > li:first-child {
+          .sub-menu-container-depth-0 {
+            left: calc(100% + 6vw);
+
+            &::after {
+              left: 6vw;
+            }
+          }
+        }
+      }
+
+      @include breakpoint('xxlarge') {
+        &__menu > li:first-child {
+          .sub-menu-container-depth-0 {
+            left: calc(100% + 88px);
+
+            &::after {
+              left: rem(88);
+            }
+          }
+        }
       }
     }
   }
+  /* stylelint-enable selector-max-compound-selectors */
 
   #site-content {
     // grid-template-areas:
